thiet ke them giao dien

--- a/src/app/page/header/header.component.html
+++ b/src/app/page/header/header.component.html
@@ -1,33 +1,25 @@
 <header class="header pt-2 ">
     <div class="container">
         <div class="row">
-            <div class="col-lg-6 col-sm-12 d-flex align-items-center text-sm-center">
-                <div class="logo w-100 align-md-center">
-                    <!-- <img src="https://cdn-icons-png.freepik.com/256/9329/9329651.png?semt=ais_hybrid" alt=""> -->
+            <div class="col-lg-6 col-sm-12 d-flex align-items-center">
+                <!-- justify-content-center -->
+                <div class="logo w-100 text-center text-lg-start">
                     <span>
-                        <p class="fs-1 text-bg-primary">Task Manager</p>
+                        <p class="fs-1 fw-bold ">Task Manager</p>
                     </span>
                 </div>
             </div>
-            <div class="col-lg-6 col-sm-12 d-flex align-items-center ">
-                <!-- <nav class="nav">
-                    <div class="btn-group">
-                        <button class="btn view-tasks m-2">View</button>
-                        <button class="btn add-task">Add</button>
-                    </div>
-                    <input type="text" placeholder="Tìm kiếm..." class="search-input" />
-                </nav> -->
-                <ul class="nav nav-underline w-100">
+            <div class="col-lg-6 col-sm-12 d-flex align-items-center justify-content-lg-end">
+                <ul class="nav nav-underline w-100 py-2">
                     <li class="nav-item">
-                        <a class="nav-link text-bg-primary" href="#">View Task</a>
+                        <a class="nav-link fw-bold " href="#">View Task</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-bg-primary" href="#">Add Task</a>
+                        <a class="nav-link fw-bold " href="#">Add Task</a>
                     </li>
                     <li class="nav-item">
                         <form class="d-flex" role="search">
-                            <input class="form-control me-2 text-bg-primary" type="search" placeholder="Search"
-                                aria-label="Search">
+                            <input class="form-control me-2 " type="search" placeholder="Search" aria-label="Search">
                             <button class="btn btn-dark" type="submit">Search</button>
                         </form>
                     </li>
