--- a/src/app/page/header/header.component.scss
+++ b/src/app/page/header/header.component.scss
@@ -6,9 +6,14 @@
     img{
         width: 5rem;
     }
+
+    a{
+        color: #000;
+    }
+
+    .nav {
+        display: flex;
+        justify-content: space-around;
+    }
 }
 
-.nav{
-    display: flex;
-    justify-content: space-around;
-}
